# Pet_project

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  tasks
alembic/: env.py
alembic/versions/: 07799fbbbeea_add_all_models.py  279fd37fbaab_add_fields_to_authors.py  3862ad261808_add_all_models.py  3acb2664bace_create_initial_tables.py  3bf113e0be05_add_all_models.py  58214c05c2a2_add_all_models.py  796decffd7db_add_all_models.py  b8b179b6ae78_add_all_models.py
src/: application.py  config.py  db.py  exceptions.py  main.py
src/healthcheck/: router.py
src/models/: author_book.py  authors.py  base.py  books.py  cities.py  countries.py  passports.py  users.py
src/routers/: authors.py  authors_books.py  books.py  cities.py  countries.py  countries_cities.py  passports.py  users.py  users_passports.py
src/schemas/: authors.py  base.py  books.py  cities.py  countries.py  healthcheck.py  passports.py  users.py
src/services/: authors.py  authors_books.py  books.py  cities.py  countries.py  countries_cities.py  passports.py  users.py  users_passports.py
