[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Sunchakov",email = "vladimiroff777@rambler.ru "}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
